--- a/css/style.css
+++ b/css/style.css
@@ -300,8 +300,8 @@ nav ul li a:hover {
     box-sizing: border-box;
     margin-top: 240px; /* Ensure the grid starts below the header */
     padding-bottom: 0px; /* Add padding at the bottom to avoid content being cut off */
-    max-width: 100vw;
-    overflow-y: scroll; /* Enable vertical scrolling */
+    max-width: 80%;
+    overflow-y: auto; /* Enable vertical scrolling */
     /*max-height: calc(100vh - 80px); /* Limit grid height to viewport minus header */
 }
 
